# epic_for_multiVehicle

./: .gitignore
src/MARSIM/: README.md
src/MARSIM/Utils/odom_visualization/: CMakeLists.txt  package.xml
src/MARSIM/Utils/odom_visualization/src/: odom_visualization.cpp
src/MARSIM/Utils/waypoint_generator/: CMakeLists.txt
src/MARSIM/Utils/waypoint_generator/src/: waypoint_generator.cpp
src/MARSIM/cascadePID/: CMakeLists.txt  package.xml
src/MARSIM/cascadePID/include/: cascadePID.hpp
src/MARSIM/cascadePID/src/: cascadePID_node.cpp
src/MARSIM/local_sensing/include/: opengl_sim.hpp
src/MARSIM/local_sensing/src/: opengl_render_node.cpp  pointcloud_render_node.cpp
src/MARSIM/map_generator/src/: map_publisher.cpp
src/MARSIM/mars_drone_sim/launch/: cave.launch  factory.launch  garage.launch  indoor.launch  indoor_ground.launch
src/MARSIM/test_interface/launch/: bm_sim.launch  single_avia_with_fuel.launch  single_car_with_fuel.xml  single_drone.xml  single_drone_mid360.launch  single_drone_with_fuel.xml  single_mid360_epic_v2.launch
src/global_planner/exploration_manager/: CMakeLists.txt  package.xml
src/global_planner/exploration_manager/config/: cave.yaml  factory.yaml  garage.yaml  indoor.yaml  indoor_ground.yaml
src/global_planner/exploration_manager/include/epic_planner/: expl_data.h  fast_exploration_fsm.h  fast_exploration_manager.h
src/global_planner/exploration_manager/launch/: algorithm.xml  algorithm_ground.xml  all.launch  cave.launch  factory.launch  garage.launch  indoor.launch  indoor_ground.launch  simulation_cave.launch  simulation_factory.launch  simulation_garage.launch  simulation_indoor.launch  simulation_indoor_ground.launch
src/global_planner/exploration_manager/src/: exploration_node.cpp  fast_exploration_fsm.cpp  fast_exploration_manager.cpp  fsm_utils.cpp
src/global_planner/frontier_manager/: CMakeLists.txt  package.xml
src/global_planner/frontier_manager/include/frontier_manager/: frontier_manager.h  raycast.h
src/global_planner/frontier_manager/src/: frontier_manager.cpp  frontier_viszer.cpp  global_planning.cpp  raycast.cpp
src/global_planner/lidar_map/: CMakeLists.txt  package.xml
src/global_planner/lidar_map/include/lidar_map/: ikd_Tree.h  lidar_map.h
src/global_planner/lidar_map/src/: ikd_Tree.cpp  lidar_map_interface.cpp  sim_lio.cpp
src/global_planner/pointcloud_topo/: CMakeLists.txt  package.xml
src/global_planner/pointcloud_topo/include/pointcloud_topo/: graph.h  graph_visualizer.hpp  parallel_bubble_astar.h
src/global_planner/pointcloud_topo/src/: bubble_split.cpp  historical_odom_graph.cpp  parallel_bubble_astar.cpp  topo_skeleton_graph.cpp
src/global_planner/pointcloud_topo/test/: test_floyd.cpp  test_recast.cpp  test_reorder.cpp
src/global_planner/utils/backward/: backward.hpp
src/global_planner/utils/lkh_tsp_solver/include/lkh_tsp_solver/: lkh_interface.h
src/global_planner/utils/lkh_tsp_solver/resource/: single.par  single.tsp  single.txt
src/local_planner/Utils/traj_utils/: CMakeLists.txt  package.xml
src/local_planner/Utils/traj_utils/include/traj_utils/: planning_visualization.h
src/local_planner/Utils/traj_utils/src/: planning_visualization.cpp
src/local_planner/minco_planner/: CMakeLists.txt  package.xml
src/local_planner/minco_planner/config/: traj.rviz
src/local_planner/minco_planner/include/gcopter/: firi.hpp  flatness.hpp  gcopter.hpp  geo_utils.hpp  minco.hpp  sfc_gen.hpp  trajectory.hpp
src/local_planner/minco_planner/include/misc/: visualizer.hpp
src/local_planner/minco_planner/include/plan_manage/: backward.hpp  local_explore_fsm.h  plan_container.hpp  planner_manager.h
src/local_planner/minco_planner/src/: fast_planner_node.cpp  planner_manager.cpp  traj_server.cpp
src/local_planner/path_searching/: CMakeLists.txt  package.xml
src/local_planner/path_searching/include/path_searching/: bubble_astar.h  fast_astar.h
src/local_planner/path_searching/include/visulizer/: bubble_viszer.hpp
src/local_planner/path_searching/src/: bubble_astar.cpp
src/vehicleSIM/loam_interface/src/: loamInterface.cpp
src/vehicleSIM/sensor_scan_generation/src/: sensorScanGeneration.cpp
src/vehicleSIM/terrain_analysis/src/: terrainAnalysis.cpp
src/vehicleSIM/terrain_analysis_ext/src/: terrainAnalysisExt.cpp
src/vehicleSIM/vehicle_simulator/launch/: system_indoor.launch  vehicle_simulator.launch
src/vehicleSIM/vehicle_simulator/log/: metrics_2025-11-12-10-32-1.txt  metrics_2025-11-12-18-31-56.txt  metrics_2025-11-12-18-55-13.txt  metrics_2025-11-12-19-19-32.txt  metrics_2025-11-12-19-25-45.txt  metrics_2025-11-13-10-52-47.txt  metrics_2025-11-13-10-56-20.txt  metrics_2025-11-13-15-10-27.txt  metrics_2025-11-13-15-33-14.txt  metrics_2025-11-13-15-42-6.txt  metrics_2025-11-13-15-49-29.txt  metrics_2025-11-13-15-55-2.txt  metrics_2025-11-4-19-19-29.txt  metrics_2025-11-4-19-21-39.txt  metrics_2025-11-4-19-27-12.txt  metrics_2025-11-5-20-10-26.txt  metrics_2025-11-6-10-13-53.txt  metrics_2025-11-6-18-10-19.txt  metrics_2025-11-6-18-38-46.txt  metrics_2025-11-6-18-40-15.txt  trajectory_2025-11-12-10-32-1.txt  trajectory_2025-11-12-18-31-56.txt  trajectory_2025-11-12-19-19-32.txt  trajectory_2025-11-12-19-25-45.txt  trajectory_2025-11-4-19-19-29.txt  trajectory_2025-11-4-19-21-39.txt  trajectory_2025-11-4-19-27-12.txt  trajectory_2025-11-5-20-10-26.txt  trajectory_2025-11-6-10-13-53.txt  trajectory_2025-11-6-18-10-19.txt  trajectory_2025-11-6-18-38-46.txt  trajectory_2025-11-6-18-40-15.txt
src/vehicleSIM/vehicle_simulator/src/: vehicleSimulator.cpp
src/vehicleSIM/visualization_tools/launch/: visualization_tools.launch
src/vehicleSIM/visualization_tools/src/: visualizationTools.cpp
src/vehicleSIM/waypoint_rviz_plugin/src/: waypoint_tool.cpp
